tests/files/flow_controller_tests/should_fail/025.cmdr
x = true;
print ln(x);